--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
       const imgFromDate = document.getElementById("imgFromDate");
       const image = document.getElementById("image");
       const sound = document.getElementById("sound");
-
-      const text = "🌸 Happy Nice Day Radwa 🌸\nMy Love ❤️";
+      const text = "🌸 Happy Nice Day Rody 🌸\n💖 My Love 💖";
       let index = 0;
 
       startBtn.addEventListener("click", () => {
